--- a/index.html
+++ b/index.html
@@ -54,14 +54,20 @@
             <div class="caja">
                 <img src="./img/img2.jpg" alt="">
                 <h3>Misión</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum sed illum voluptate quasi, libero quod facilis inventore iste optio nemo voluptas nesciunt vel nisi deserunt quaerat officia aliquid quisquam! Fugiat.</p>
+                <p>Somos una institución educativa comprometida al servicio de la socidad guatemalteca proyectada a la comunidad de Patzicia, que con una actitud pionera en la innovación educativa Buscanosla calidad de vida de la persona humana, y como a através de proyectos
+                    educativos y comunitarios contribuye al desarrollo que asegura la calidad de formación del estudiante y del docente para el pleno desenvolvimiento de las potencialidades basadas en principios éticos,
+                    culturales, espiritula esy que en forma conjunta desarrollan liderazgo que continuamente impacten a las familias y a la sociedad.
+                </p>
                 <a href="#" class="btn">VER MÁS</a>
             </div>
 
             <div class="caja">
                 <img src="./img/img3.jpg" alt="">
                 <h3>Visión</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum sed illum voluptate quasi, libero quod facilis inventore iste optio nemo voluptas nesciunt vel nisi deserunt quaerat officia aliquid quisquam! Fugiat.</p>
+                <p>Ser una institución educativa que impulse en forma innovadora, educación de calidad del nivel medio y que provea a la sociedad personas enteramente preparadas de forma integral, que le permitan desenvolverse y desarrollar sus habilidades personales, capacidades
+                    para interpretar su entorno, expresarse libremente, tomar decisiones, identificarse armónicamente en la socidad, cooperar, practicar valores morales en la cotidianidad, que conozca sus obligaciones y derechos para encontrar la plenitud como persona capaz para 
+                    mejorar el nivel de vida de su familia, comunidad y de si mismo.
+                </p>
                 <a href="#" class="btn">VER MÁS</a>
             </div>
         </div>
@@ -202,7 +208,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.4603248819585!2d-90.92932363388437!3d14.629791565128368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85893fbeefafad9d%3A0x95ba15555b85d3f!2sCentro%20Educativo%20Sion%20(%20Zion%20College%20)!5e0!3m2!1ses!2sgt!4v1625799029986!5m2!1ses!2sgt" 
             height="525" loading="lazy"></iframe>
         </div>
-        <form action="./php/enviar.php" method="POST">
+        <form name="contact" method="POST" data-netlify="true">
             <h1 class="heading">Contactos</h1>
             <div class="inputcaja">
                 <input name="name" type="text" required>
