--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="suscribete">
         <h3>Nuevo Ciclo Escolar</h3>
         <p>Puedes dejar tu correo electrónico para poder brindar más información sobre el nuevo ciclo escolar 2022.</p>
-        <form action="">
+        <form name="informa" method="POST" data-netlify="true">
             <input type="email" placeholder="Ingresa tu email">
             <input type="submit" value="Solicitar Info.">
         </form>
@@ -226,7 +226,7 @@
                 <textarea name="message" required name="" id="" cols="30" rows="10"></textarea>
                 <label for="">Mensaje:</label>
             </div>
-            <input type="submit" class="btn" value="ENVIAR">
+            <button type="submit" class="btn">Enviar</button>
         </form>
     </section>
 
