--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <div class="suscribete">
         <h3>Nuevo Ciclo Escolar</h3>
         <p>Puedes dejar tu correo electrónico para poder brindar más información sobre el nuevo ciclo escolar 2022.</p>
-        <form name="informa" method="POST" data-netlify="true">
-            <input type="email" placeholder="Ingresa tu email">
+        <form action="./index.html" name="informa" method="POST" data-netlify="true">
+            <input name="email" type="email" placeholder="Ingresa tu email">
             <input type="submit" value="Solicitar Info.">
         </form>
     </div>
@@ -208,7 +208,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.4603248819585!2d-90.92932363388437!3d14.629791565128368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85893fbeefafad9d%3A0x95ba15555b85d3f!2sCentro%20Educativo%20Sion%20(%20Zion%20College%20)!5e0!3m2!1ses!2sgt!4v1625799029986!5m2!1ses!2sgt" 
             height="525" loading="lazy"></iframe>
         </div>
-        <form name="contact" method="POST" data-netlify="true">
+        <form action="./index.html" name="contact" method="POST" data-netlify="true">
             <h1 class="heading">Contactos</h1>
             <div class="inputcaja">
                 <input name="name" type="text" required>
