--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cenro Educativo Zion</title>
+    <link rel="icon" type="image/png" href="./img/ico.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -239,10 +240,14 @@
             
             <div class="caja">
                 <h3>Buscanos en</h3>
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">Twitter</a>
-                <a href="#">Tiktok</a>
+                <div class="info">
+                    <i class="fab fa-facebook-square"></i>
+                    <a href="https://www.facebook.com/centroeducativo.zion" target="_blank">Facebook</a>
+                </div>
+                <div class="info">
+                    <i class="fab fa-instagram-square"></i>
+                    <a href="#">Instagram</a>
+                </div>
             </div>
 
             <div class="caja">
