--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="inicio" id="inicio">
         <div class="content">
-            <Center><h3>Editado desde GitHub<span>ZION</span></h3>
+            <Center><h3>Seminario de Tecnología<span>ZION</span></h3>
             <p>¡Más que Educación Inspiración!</p>
             <a href="#" class="btn">MÁS DETALLES</a></Center>
         </div>
